basic site with contact information

--- a/index.html
+++ b/index.html
@@ -1,1 +1,35 @@
-Hello World
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Andrew Rosbrook</title>
+	<link rel="stylesheet" type="text/css" href="ar.css">
+	<link href="https://fonts.googleapis.com/css?family=Sansita" rel="stylesheet">
+	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+	<script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+</head>
+<body>
+	<div id="main_container">
+		<div class="centered-container">
+    		<div class="flip">
+				<div class="card">
+					<div class="face front circle" id="super-circle">
+						<h1>&infin;ajr</h1>
+					</div>
+					<div class="face back circle" id="super-circle">
+						<div id="back-text">
+							<h3>Andrew Rosbrook</h3>
+							<br>
+							<i class="fa fa-envelope-o contact-item" aria-hidden="true"></i> <a href="mailto:contact@andrewrosbrook.com">Email</a>
+							<br>
+							<i class="fa fa-linkedin-square contact-item" aria-hidden="true"></i> <a href="https://www.linkedin.com/in/andrew-rosbrook-2a108b5a/">LinkedIn</a>
+							<br>
+							<i class="fa fa-github contact-item" aria-hidden="true"></i> <a href="https://github.com/andrewrosbrook">GitHub</a>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<script src="ar.js"></script>
+</body>
